<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Bird Watch</string>
  <string name="observation_date">Observation Date</string>
  <string name="observation_location">Observation Location</string>
  <string name="save">Save</string>
  <string name="clear">Clear</string>
  <string name="create_observation">Create Observation</string>
  <string name="text_about">Example of Transition between Activities</string>
  <string name="author_name">Tiago Boaventura Miranda</string>
  <string name="logo_description">Logo UTFPR</string>
  <string name="add">Add</string>
  <string name="yyyy_mm_dd">yyyy-mm-dd</string>
  <string name="hh_mm">hh:mm</string>
  <string name="menu_nav_observations">Observations</string>
  <string name="menu_nav_birds">Birds</string>
  <string name="menu_nav_about">About</string>
  <string name="open">open</string>
  <string name="close">close</string>
  <string name="label_observation_date">Date</string>
  <string name="label_observation_specie">Specie</string>
  <string name="label_observation_time">Time</string>
  <string name="label_observation_location">Location</string>
  <string name="label_observation_id">ID</string>
  <string name="label_observations">Observations</string>
  <string name="label_about">About</string>
  <string name="img_content_description_delete">delete</string>
  <string name="label_delete_record">Do you really want to delete this record?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="confirmation">Confirmation</string>
  <string name="cancel">Cancel</string>
  <string name="label_edit_observation">Edit Observation</string>
  <string name="label_edit_bird">Edit Bird</string>
  <string name="error_date_required">Date is a required field.</string>
  <string name="error_time_required">Time is a required field.</string>
  <string name="error_location_required">Location is a required field.</string>
  <string name="error_specie_required">Specie is a required field.</string>
  <string name="label_color">Color</string>
  <string name="label_common_name">Common Name</string>
  <string name="label_specie">Specie</string>
  <string name="label_birds">Birds</string>
  <string name="ok">OK</string>
  <string name="notice">Notice</string>
  <string name="warn_species_not_found">No species found in the bank to create observations</string>
</resources>