<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/layoutObservation"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <EditText
    android:id="@+id/editTextDate"
    style="@style/field_style"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:hint="@string/yyyy_mm_dd"
    android:importantForAutofill="no"
    android:inputType="date"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textViewDateLabel" />
  <EditText
    android:id="@+id/editTextTime"
    style="@style/field_style"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:hint="@string/hh_mm"
    android:importantForAutofill="no"
    android:inputType="time"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textViewTimeLabel" />
  <EditText
    android:id="@+id/editTextLocation"
    style="@style/field_style"
    android:hint="@string/observation_location"
    android:importantForAutofill="no"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textViewLocationLabel" />
  <Spinner
    android:id="@+id/spinnerSpecie"
    style="@style/field_style"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textViewSpeciesLabel" />
  <TextView
    android:id="@+id/textViewLocationLabel"
    style="@style/label_field_style"
    android:text="@string/label_observation_location"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/editTextTime" />
  <TextView
    android:id="@+id/textViewTimeLabel"
    style="@style/label_field_style"
    android:text="@string/label_observation_time"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/editTextDate" />
  <TextView
    android:id="@+id/textViewSpeciesLabel"
    style="@style/label_field_style"
    android:text="@string/label_observation_specie"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/editTextLocation" />
  <TextView
    android:id="@+id/textViewDateLabel"
    style="@style/label_field_style"
    android:text="@string/label_observation_date"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>