<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="16dp">

  <ImageView
    android:id="@+id/iconDelete"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:contentDescription="@string/img_content_description_delete"
    android:onClick="onDeleteClick"
    android:src="@drawable/trash_solid"
    app:layout_constraintBottom_toTopOf="@id/textViewColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/textViewColor"
    app:layout_constraintTop_toBottomOf="@id/textViewSpecie" />

  <TextView
    android:id="@+id/textViewId"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/labelId"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/labelSpecie"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/label_specie"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/labelId" />

  <TextView
    android:id="@+id/textViewSpecie"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintEnd_toStartOf="@id/iconDelete"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toEndOf="@id/labelSpecie"
    app:layout_constraintTop_toBottomOf="@id/textViewId" />

  <TextView
    android:id="@+id/labelColor"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/label_color"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textViewSpecie" />

  <TextView
    android:id="@+id/textViewColor"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintEnd_toStartOf="@id/iconDelete"
    app:layout_constraintStart_toEndOf="@id/labelColor"
    app:layout_constraintTop_toBottomOf="@id/textViewSpecie" />

  <TextView
    android:id="@+id/labelCommonName"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/label_common_name"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textViewColor" />

  <TextView
    android:id="@+id/textViewCommonName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toEndOf="@id/labelCommonName"
    app:layout_constraintTop_toBottomOf="@id/textViewColor" />

  <TextView
    android:id="@+id/labelId"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/label_observation_id"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>