<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/layout_bird"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <EditText
    android:id="@+id/activity_bird_form_field_specie"
    style="@style/field_style"
    android:hint="@string/label_specie"
    android:importantForAutofill="no"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/activity_bird_form_label_field_specie" />

  <EditText
    android:id="@+id/activity_bird_form_field_color"
    style="@style/field_style"
    android:hint="@string/label_color"
    android:importantForAutofill="no"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/activity_bird_form_label_field_color" />


  <EditText
    android:id="@+id/activity_bird_form_field_common_name"
    style="@style/field_style"
    android:hint="@string/label_common_name"
    android:importantForAutofill="no"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/activity_bird_form_label_field_common_name" />

  <TextView
    android:id="@+id/activity_bird_form_label_field_specie"
    style="@style/label_field_style"
    android:text="@string/label_specie"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/activity_bird_form_label_field_common_name"
    style="@style/label_field_style"
    android:text="@string/label_common_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/activity_bird_form_field_color" />

  <TextView
    android:id="@+id/activity_bird_form_label_field_color"
    style="@style/label_field_style"
    android:text="@string/label_color"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/activity_bird_form_field_specie" />
</androidx.constraintlayout.widget.ConstraintLayout>